--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,36 +1,71 @@
+<div class="w-1/2 h-screen position-absolute top-0 end-0">
+  <ng-lottie [options]="options">
+  </ng-lottie>
+</div>
+
 <div class="welcome" [style.backgroundColor]="currentMessage? currentMessage.bg: '#000066'">
-    <div style="width: 100vw; height: 100vh;" *ngIf="currentMessage">
+  <div style="width: 100vw; height: 100vh;" *ngIf="currentMessage">
 
-         <div [@panelInOut] class="container-fluid text-left text-white pt-lg-20 pt-md-10 pt-sm-6 w-full" *ngIf="currentMessage.type =='session-start-confirmation'" [style.backgroundColor]="currentMessage? currentMessage.bg: '#000066'">
-             <div class="container-sm">
-                 <p class="h1 text-left text-white" style="font-size: 60px;">{{currentMessage.sessionDetails!.heading}}</p>
-                 <ul class="px-10 py-12 " style="line-height: 200%;">
-                    <li class="h2 text-white" style="font-size: 40px;" *ngFor="let checkList of currentMessage.sessionDetails!.checkList">{{checkList}}</li>
-                </ul>
-            </div>
-            <div class="container text-center py-sm-0 py-md-0 py-lg-10">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col">
-                        <button class="w-full btn btn-white btn-lg btn-block" style="font-size: 20px;" (click)="sessionStartConfirmation()">Start Session <fa-icon style="padding-left: 30px;" [icon]="chevronRightIcon"></fa-icon> </button>
-                    </div>
-                    <div class="col"></div>
+    <div [@panelInOut] style="width: 100vw; height: 100vh;"
+      class="container-fluid d-flex align-items-center justify-content-center"
+      *ngIf="currentMessage.type =='session-start-confirmation'"
+      [style.backgroundColor]="currentMessage? currentMessage.bg: '#ffffff'">
+      <div class="row d-flex align-items-center justify-content-center text-primary text-center">
+        <div class="col-md-12">
+          <p class="activity-number display-6">Activity No. {{currentMessage.sessionDetails?.activity?.no}}</p>
+        </div>
+        <div class="col-md-12">
+          <h1 class="activity-name display-1 text-primary">{{currentMessage.sessionDetails?.activity?.name}}</h1>
+        </div>
+        <div class="checklist-div col-md-12 d-flex align-items-center justify-content-center">
+          <div class="row justify-content-center">
+            <div class="col-md-4" *ngFor="let check of currentMessage.sessionDetails?.checkList">
+              <div class="checklist-card card ">
+                <div class="card-body">
+                  <img class="checkList-img" src={{check.src}} alt="checklist image">
+                  <p class="w-full text-center display-6 text-dark">{{check.description}}</p>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-
-        <div class="message display-1  text-center text-white d-flex justify-content-center align-items-center"
-        [@panelInOut] *ngIf="currentMessage.type =='message'">{{currentMessage!.text}}</div>
-        
-        <app-announcement *ngIf="currentMessage.type =='announcement'" [text]="currentMessage.text"></app-announcement>
-
-        <app-pre-session-survey (selected)="preSessionMoodSelected($event)" *ngIf="currentMessage.type =='pre-session-survey'"></app-pre-session-survey>
-
-        <app-select-genre (selected)="genreSelected($event)" *ngIf="currentMessage.type =='select-genre'"></app-select-genre>
-
-        <div class="tutorial" *ngIf="currentMessage.type =='tutorial'">
-            <iframe src="https://www.youtube.com/embed/chw2oMUrh4U?autoplay=1" title="Sit To Stand" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
-            <button class="btn btn-primary" (click)="showNextStep()">Skip Video Introduction</button>
+        <div class="col-md-12 py-xl-4">
+          <div class="px-4 w-full d-flex justify-content-center align-items-center">
+            <!-- * Training button  -->
+            <!-- <div class="mx-10">
+                <button class="training-btn btn btn-secondary">Training
+              </button> -->
+            <!-- </div> -->
+            <div style="margin-right: 1rem;">
+              <button style="position: relative ;" class="start-session-btn btn btn-primary"
+                (click)="sessionStartConfirmation()">Start
+                Activity
+                <fa-icon style="position: absolute; right: 5%;" [icon]="chevronRightIcon">
+                </fa-icon>
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+
+
+    <div class="message display-1  text-center text-white d-flex justify-content-center align-items-center"
+      [@panelInOut] *ngIf="currentMessage.type =='message'">{{currentMessage!.text}}</div>
+
+    <app-announcement *ngIf="currentMessage.type =='announcement'" [text]="currentMessage.text"></app-announcement>
+
+    <app-pre-session-survey (selected)="preSessionMoodSelected($event)"
+      *ngIf="currentMessage.type =='pre-session-survey'"></app-pre-session-survey>
+
+    <app-select-genre (selected)="genreSelected($event)" *ngIf="currentMessage.type =='select-genre'">
+    </app-select-genre>
+
+    <div class="tutorial" *ngIf="currentMessage.type =='tutorial'">
+      <iframe src="https://www.youtube.com/embed/chw2oMUrh4U?autoplay=1" title="Sit To Stand" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <button class="btn btn-primary" (click)="showNextStep()">Skip Video Introduction</button>
+    </div>
+  </div>
 </div>
