--- a/src/app/pages/session/session.component.html
+++ b/src/app/pages/session/session.component.html
@@ -48,3 +48,7 @@
     </div>
   </div>
 </ng-template>
+
+<div *ngIf="!videoAvailable" class="position-absolute translate-middle start-1/2 top-1/2">
+  <h1 class="display-4 text-white">Loading...</h1>
+</div>
