--- a/src/app/pages/game/game.component.scss
+++ b/src/app/pages/game/game.component.scss
@@ -11,3 +11,10 @@
     position: absolute;
     z-index: 1;
 }
+
+app-elements {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
