--- a/src/app/widgets/elements/elements.component.scss
+++ b/src/app/widgets/elements/elements.component.scss
@@ -12,4 +12,9 @@
         top: 200px;
         position: absolute;
     }
+    > * {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+    }
 }
