--- a/src/app/widgets/elements/ribbon/ribbon.component.html
+++ b/src/app/widgets/elements/ribbon/ribbon.component.html
@@ -1,1 +1,8 @@
-<p>ribbon works!</p>
+<div
+    [@bgFadeIn]="{value: bgAnimationState }"
+    class="w-screen h-1/3 top-1/2 position-relative d-flex">
+    <h1
+        [@textSlideIn]="{value: textAnimationState }"
+        class="display-1 text-nowrap text-center text-primary m-auto">{{ title | uppercase }}
+    </h1>
+</div>
