fix(element): replace input from ribbon component with state

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -29,7 +29,7 @@
 
     <div class="ribbon" *ngIf="state.ribbon && state.ribbon.show">
         Show ribbon here
-        <element-ribbon [titles]="state.ribbon.titles"></element-ribbon>
+        <element-ribbon></element-ribbon>
     </div>
 
     <div class="overlay" *ngIf="state.overlay && state.overlay.show">
