feat: 🎸 WIP - Prompt element

--- a/src/app/widgets/elements/prompt/prompt.component.html
+++ b/src/app/widgets/elements/prompt/prompt.component.html
@@ -1,1 +1,3 @@
-<p>prompt works!</p>
+<div [ngClass]="state.position === 'center' ? 'center prompt' : 'top-right prompt'">
+  {{ state.value }}
+</div>
