fix: 🐛 correctly subscribe to prompt state

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="prompt">
-        <element-prompt [value]="state.prompt.value"></element-prompt>
+        <element-prompt></element-prompt>
     </div>
 
     <div class="timeout">
