--- a/src/app/widgets/elements/score/score.component.html
+++ b/src/app/widgets/elements/score/score.component.html
@@ -1,1 +1,5 @@
-<p>score works!</p>
+<p class="top-5 start-5 position-absolute p-3 rounded-3 border border-white bg-primary text-white h2 d-flex justify-content-center align-items-center">{{state.label}}:&nbsp;
+    <span 
+        [@fadeTransition]="{ value: animationState, params: { duration: state.transitionDuration || '500' } }" 
+        class="display-6 font-bold">{{state.value}}</span>
+</p>
