feat: 🎸 WIP prompt animation

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -41,5 +41,5 @@
         <element-banner></element-banner>
     </div>
 
-    <button (click)="updateElement()">Update Element</button>
+    <!-- <button (click)="updateElement()">Update Element</button> -->
 </div>
