--- a/src/app/widgets/elements/prompt/prompt.component.html
+++ b/src/app/widgets/elements/prompt/prompt.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="state.position === 'center' ? 'center prompt' : 'top-right prompt'">
+<div [@align-prompt]="{value: promptAnimationState }" class="prompt">
   {{ state.value }}
 </div>
