feat: added timer element

--- a/src/app/widgets/elements/timer/timer.component.html
+++ b/src/app/widgets/elements/timer/timer.component.html
@@ -1,1 +1,6 @@
-<p>timer works!</p>
+<div
+  class="timer position-absolute top-5 end-5 p-3 d-flex align-items-center justify-content-center rounded-4 border-2 border-white ">
+  <p class="display-4 text-white">
+    {{time.minutes}}<span class="px-1" style="position: relative; bottom: .09em;">:</span>{{time.seconds}}
+  </p>
+</div>
