fix: 🐛 add explicit checks for prompt visibility

--- a/src/app/widgets/elements/prompt/prompt.component.html
+++ b/src/app/widgets/elements/prompt/prompt.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="attributes.visibility == 'visible'" [@align-prompt]="{value: promptAnimationState }" class="prompt">
+<div *ngIf="attributes && attributes.visibility == 'visible'" [@align-prompt]="{value: promptAnimationState }"
+  class="prompt">
   {{ state.value }}
 </div>
