--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -7,7 +7,6 @@
     </div>
 
     <div class="timer">
-        Show timer here.
         <element-timer></element-timer>
     </div>
 
@@ -16,30 +15,24 @@
     </div>
 
     <div class="timeout">
-        Show timeout here.
         <element-timeout></element-timeout>
     </div>
 
     <div class="video">
-        Show video here
-        Can be simple video or more
         <element-video></element-video>
     </div>
 
     <div class="ribbon">
-        Show ribbon here
         <element-ribbon></element-ribbon>
     </div>
 
     <div class="overlay">
-        Used for confetti and translucent overlay
         <element-overlay></element-overlay>
     </div>
 
-    <div class="banner">
-        Used for banner. Must support HTML values
+    <div>
         <element-banner></element-banner>
     </div>
 
-    <button style="width: 100px; height:50px;" (click)="updateElement()">Update Element</button>
+    <button style="width: 100px; height:50px;" (click)="testOutroBannerElement()">Test Banner Element</button>
 </div>
