fix: changed styling of timer element

--- a/src/app/widgets/elements/timer/timer.component.html
+++ b/src/app/widgets/elements/timer/timer.component.html
@@ -1,5 +1,5 @@
-<div
-  class="timer position-absolute top-5 end-5 p-3 d-flex align-items-center justify-content-center rounded-4 border-2 border-white ">
+<div *ngIf="attributes && attributes.visibility=== 'visible'"
+  class="timer position-absolute top-5 end-10 p-4 d-flex align-items-center bg-primary justify-content-center rounded-4 ">
   <p class="display-4 text-white">
     {{time.minutes}}<span class="px-1" style="position: relative; bottom: .09em;">:</span>{{time.seconds}}
   </p>
