fix: 🐛 accept a className for button styling

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -34,5 +34,5 @@
         <element-banner></element-banner>
     </div>
 
-    <button style="width: 100px; height:50px;" (click)="testOutroBannerElement()">Test Banner Element</button>
+    <button style="width: 100px; height:50px;" (click)="testOutroBannerElement()">Test Element</button>
 </div>
