fix: score animation and remove border

--- a/src/app/widgets/elements/score/score.component.html
+++ b/src/app/widgets/elements/score/score.component.html
@@ -1,6 +1,6 @@
 <p 
     *ngIf="state && state.attributes.visibility === 'visible'"
-    class="top-5 start-5 position-absolute p-3 rounded-3 border border-white bg-primary text-white h2 d-flex justify-content-center align-items-center">
+    class="top-5 start-5 position-absolute p-3 rounded-3 bg-primary text-white h2 d-flex justify-content-center align-items-center">
     {{state.data.label}}:&nbsp;
     <span 
         [@fadeTransition]="{ value: animationState, params: { duration: state.data.transitionDuration || '500' } }" 
