--- a/src/app/widgets/guide/guide.component.html
+++ b/src/app/widgets/guide/guide.component.html
@@ -20,19 +20,27 @@
 
 
 <div class="guide-prompt d-flex {{ state.prompt.className }}" *ngIf="state.prompt">
-    <div class="card">
-        <div class="card-header text-center" *ngIf="state.prompt.icon">
-            <fa-icon [icon]="state.prompt.icon" size="6x"></fa-icon>
-        </div>
-        <div class="card-body text-center" *ngIf="state.prompt.text">
-            <h2>{{ state.prompt.text }}</h2>
-        </div>
+  <div class="card">
+    <div class="card-header text-center" *ngIf="state.prompt.icon">
+      <fa-icon [icon]="state.prompt.icon" size="6x"></fa-icon>
     </div>
+    <div class="text-center text-white" *ngIf="state.prompt.promptType === 'success'">
+      <!-- <fa-icon [icon]="faCheckIcon" size="6x"></fa-icon> -->
+      <img style="border-radius: 50%;" src="/assets/images/circle-check-solid.svg" alt="">
+    </div>
+    <div class="text-center text-white" *ngIf="state.prompt.promptType === 'failure'">
+      <!-- <fa-icon [icon]="faCheckIcon" size="6x"></fa-icon> -->
+      <img style="border-radius: 50%;" src="/assets/images/circle-xmark-solid.svg" alt="">
+    </div>
+    <div class="card-body text-center" *ngIf="state.prompt.text">
+      <h2>{{ state.prompt.text }}</h2>
+    </div>
+  </div>
 </div>
 
 
 <div class="video d-flex justify-content-center align-items-center" [ngClass]="{'lg': state.video.size == 'lg'}" *ngIf="state.video">
-    <iframe #yt  [src]="state.video.url | safe: 'resourceUrl'" title="Sit To Stand" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+    <iframe #yt  [src]="state.video.url | safe: 'resourceUrl'" title="Sit To Stand" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <button class="btn btn-primary" (click)="onSkipVideoTutorial()">Skip Video Introduction</button>
 </div>
 
