feat: 🎸 add progress bar animation

--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -2,7 +2,11 @@
   <div class="pt-4" [innerHTML]="state.htmlStr | safeHtml"></div>
   <div class="row pt-6">
     <div class="col-12 pt-2" *ngFor="let button of state.buttons">
-      <button type="button" class="btn btn-primary btn-sm font-bold">{{ button.title}}</button>
+      <div class="progress" style="height: 40px; width: 85%;">
+        <div class="progress-bar bg-success" (click)="onButtonClick(button)" role="progressbar"
+          [ngStyle]="{'width': progressBarWidth + '%'}"
+          aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"><span>{{ button.title }}</span></div>
+      </div>
     </div>
   </div>
 </div>
