--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -5,7 +5,7 @@
       <div class="progress" style="height: 40px; width: 85%;">
         <div class="progress-bar bg-success" (click)="onButtonClick(button)" role="progressbar"
           [ngStyle]="{'width': progressBarWidth + '%'}"
-          aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"><span>{{ button.title }}</span></div>
+          [attr.aria-valuenow]=progressBarWidth aria-valuemin="0" aria-valuemax="100"><span>{{ button.title }}</span></div>
       </div>
     </div>
   </div>
