--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -1,8 +1,8 @@
 <div class="elements">
-    {{ state | json }}
+    <!-- {{ state | json }} -->
     <div class="score">
-        <label>{{state.score.data.label}}</label>
-        <span>{{state.score.data.value}}</span>
+        <!-- <label>{{state.score.data.label}}</label>
+        <span>{{state.score.data.value}}</span> -->
         <element-score></element-score>
     </div>
 
@@ -34,5 +34,5 @@
         <element-banner></element-banner>
     </div>
 
-    <button style="width: 100px; height:50px;" (click)="testIntroBannerElement()">Test Element</button>
+    <!-- <button style="width: 100px; height:50px;" (click)="testIntroBannerElement()">Test Element</button> -->
 </div>
