fix: add guide element in elements component

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -30,6 +30,10 @@
         <element-overlay></element-overlay>
     </div>
 
+    <div class="guide">
+        <element-guide></element-guide>
+    </div>
+
     <div>
         <element-banner></element-banner>
     </div>
