--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -38,5 +38,5 @@
         <element-banner></element-banner>
     </div>
 
-    <!-- <button style="width: 100px; height:50px;" (click)="testIntroBannerElement()">Test Element</button> -->
+    <!-- <button style="width: 100px; height:50px;" (click)="updateElement()">Test Element</button> -->
 </div>
