--- a/src/app/widgets/elements/timeout/timeout.component.html
+++ b/src/app/widgets/elements/timeout/timeout.component.html
@@ -1,1 +1,1 @@
-<div *ngIf="attributes && attributes.visibility === 'visible'" [@timeOut] class="timer" #timer></div>
+<div *ngIf="attributes && attributes.visibility === 'visible'" [@timeOut]="{value:'', params:{duration : state.timeout}}" class="timer" #timer></div>
