--- a/src/app/widgets/elements/ribbon/ribbon.component.html
+++ b/src/app/widgets/elements/ribbon/ribbon.component.html
@@ -4,6 +4,6 @@
     class="w-screen h-1/3 top-1/2 position-relative d-flex">
     <h1
         [@textSlideIn]="{value: textAnimationState }"
-        class="display-1 text-nowrap text-center text-primary m-auto">{{ title | uppercase }}
+        class="display-1 text-nowrap text-center text-primary m-auto">{{ title }}
     </h1>
 </div>
