--- a/src/app/widgets/elements/prompt/prompt.component.scss
+++ b/src/app/widgets/elements/prompt/prompt.component.scss
@@ -1,15 +1,16 @@
+@import '../../../variables';
+
 .prompt {
   height: 200px;
   width: 200px;
-  background-color: #b5e2c6;
-  border-radius: 50%;
-  line-height: 175px;
-  border: 10px solid #ffffff;
+  background-color: $success;
+  border-radius: 10%;
   font-size: 125px;
   text-align: center;
-  color: #000066;
+  color: #fff;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
 }
