--- a/src/app/widgets/elements/video/video.component.html
+++ b/src/app/widgets/elements/video/video.component.html
@@ -1,17 +1,19 @@
 <div @zoomInOut *ngIf="attributes && attributes.visibility === 'visible' && state"
   class="video-element position-absolute translate-middle top-1/2 start-1/2 rounded-4 d-flex align-items-center flex-column justify-content-center bg-info ">
-  <img *ngIf="state && state.type === 'gif'" class="video rounded-3" [src]="state.src | safe: 'url'" />
+  <img *ngIf="state && state.type === 'gif' && state.src" class="video rounded-3" [src]="state.src | safe: 'url'" />
 
-  <iframe *ngIf="state && state.type === 'youtube'" class="video rounded-3" [src]="state.src | safe: 'resourceUrl'"
-    allow="autoplay; encrypted-media; picture-in-picture" [frameBorder]="0" allowfullscreen></iframe>
+  <iframe *ngIf="state && state.type === 'youtube' && state.src" class="video rounded-3"
+    [src]="state.src | safe: 'resourceUrl'" allow="autoplay; encrypted-media; picture-in-picture" [frameBorder]="0"
+    allowfullscreen></iframe>
 
-  <video *ngIf="state && state.type === 'video'" class="video rounded-3" controls [autoplay]="true">
+  <video *ngIf="state && state.type === 'video' && state.src" class="video rounded-3" controls [autoplay]="true" muted
+    loop>
     <source [src]="state.src" type="video/mp4">
   </video>
 
   <div class="py-4">
-    <p class=" display-5 text-white">{{state.title}}</p>
+    <p *ngIf="state && state.title" class=" display-5 text-white">{{state.title}}</p>
     <hr style="border: 2px solid #A0AEC0;">
-    <p class=" display-6 text-white">{{state.description}}</p>
+    <p *ngIf="state && state.description" class=" display-6 text-white">{{state.description}}</p>
   </div>
 </div>
