feat: add confetti element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -34,6 +34,10 @@
     <element-guide></element-guide>
   </div>
 
+  <div class="confetti">
+    <element-confetti></element-confetti>
+  </div>
+
   <div>
     <element-banner></element-banner>
   </div>
