--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -38,9 +38,13 @@
     <element-confetti></element-confetti>
   </div>
 
+  <div class="toast">
+    <element-toast></element-toast>
+  </div>
+
   <div>
     <element-banner></element-banner>
   </div>
 
-    <!-- <button style="width: 100px; height:50px;" (click)="updateElement()">Test Element</button> -->
+  <!-- <button style="width: 100px; height:50px;" (click)="testToastElement()">Test Element</button> -->
   </div>
