feat: 🎸 add toast element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -38,7 +38,7 @@
     <element-confetti></element-confetti>
   </div>
 
-  <div class="toast">
+  <div>
     <element-toast></element-toast>
   </div>
 
