--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -5,8 +5,7 @@
     <div class="col-12 pt-2" *ngFor="let button of state.buttons">
       <div class="progress" style="height: 40px; width: 85%;">
         <div class="progress-bar bg-success" (click)="onButtonClick(button)" role="progressbar"
-          [ngStyle]="{'width': progressBarWidth + '%'}"
-          [attr.aria-valuenow]=progressBarWidth aria-valuemin="0" aria-valuemax="100"><span>{{ button.title }}</span></div>
+          [@animate-progress-bar]="{value: progressBarAnimationState, params: { duration: progressDuration }}"><span>{{ button.title }}</span></div>
       </div>
     </div>
   </div>
