--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -4,7 +4,7 @@
   <div class="row pt-6">
     <div class="col-12 pt-2" *ngFor="let button of state.buttons">
       <div class="progress" style="height: 40px; width: 85%;">
-        <div class="progress-bar bg-success" (click)="onButtonClick(button)" role="progressbar"
+        <div class="progress-bar bg-success" [style.animation]="progressBarAnimationState === 'progress' ? 'progress '+ progressDuration +'s linear' : null" (click)="onButtonClick(button)" role="progressbar"
           [@animate-progress-bar]="{value: progressBarAnimationState, params: { duration: progressDuration }}"><span>{{ button.title }}</span></div>
       </div>
     </div>
