fix: 🐛 make translateY work on Safari
Thanks to @vigneshrajj (Vignesh) for debugging help.

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="ribbon">
-    <element-ribbon></element-ribbon>
+    <element-ribbon style="display: block; height: 100vh;"></element-ribbon>
   </div>
 
   <div class="overlay">
