--- a/src/app/widgets/elements/banner/banner.component.scss
+++ b/src/app/widgets/elements/banner/banner.component.scss
@@ -28,6 +28,8 @@
     margin-right: auto;
     border-radius: 5px;
     background-color: $primary;
+    height: 40px;
+    width: 85%;
 
     span {
       position: absolute;
@@ -37,12 +39,42 @@
       width: 100%;
     }
   }
+
+  &.loader {
+    height: 350px;
+
+    .progress-bar {
+      width: 100%;
+      height: 100%;
+      animation: infiniteProgress 2s infinite linear;
+      transform-origin: 0% 50%;
+    }
+  }
+
+  &.status {
+    .progress {
+      width: 50%;
+    }
+  }
+
   @keyframes progress {
     0% {
       width: 0%;
     }
     100% {
       width: 100%;
+    }
+  }
+
+  @keyframes infiniteProgress {
+    0% {
+      transform: translateX(0) scaleX(0);
+    }
+    40% {
+      transform: translateX(0) scaleX(0.4);
+    }
+    100% {
+      transform: translateX(100%) scaleX(0.5);
     }
   }
 }
