--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -4,8 +4,9 @@
   <div class="row pt-6">
     <div class="col-12 pt-2" *ngFor="let button of state.buttons">
       <div class="progress">
-        <div class="progress-bar bg-success" [style.animation]="progressBarAnimationState === 'progress' ? 'progress '+ progressDuration +'s linear' : null" (click)="onButtonClick(button)" role="progressbar"
-          [@animate-progress-bar]="{value: progressBarAnimationState, params: { duration: progressDuration }}"><span>{{ button.title }}</span></div>
+        <div class="progress-bar bg-success"
+          [style.animation]="progressBarAnimationState === 'progress' ? 'progress '+ progressDuration +'s linear' : null"
+          (click)="onButtonClick(button)" role="progressbar"><span>{{ button.title }}</span></div>
       </div>
     </div>
   </div>
