feat: auto benchmarking using query param

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,5 +1,5 @@
 <div #gameElm>
-  <video id="webcam" muted="true" autoplay="true" width="100" height="100" #videoElm></video>
+  <video id="webcam" crossorigin="anonymous" #videoElm></video>
   <div id="phaser-canvas" #canvasElm></div>
   <app-elements></app-elements>
 </div>
