--- a/src/app/widgets/elements/prompt/prompt.component.scss
+++ b/src/app/widgets/elements/prompt/prompt.component.scss
@@ -2,7 +2,7 @@
 
 .prompt {
   height: 200px;
-  width: 200px;
+  min-width: 200px;
   background-color: $success;
   border-radius: 10%;
   font-size: 125px;
