feat(moving-tones): add sit to stand like progress bar

--- a/src/app/widgets/elements/timeout/timeout.component.html
+++ b/src/app/widgets/elements/timeout/timeout.component.html
@@ -1,1 +1,8 @@
-<div *ngIf="attributes && attributes.visibility === 'visible'" [@timeOut]="{value:'', params:{duration : state.timeout}}" class="timer" #timer></div>
+<div *ngIf="attributes && attributes.visibility === 'visible'" class="timer row">
+    <div *ngIf="state.bars && state.bars[0]" class="first col p-0 position-relative">
+        <div class="position-absolute start-0" [ngStyle]="{ 'background-color': colors[state.bars[0]] }" [@timeOut]="{value:'', params:{duration : state.timeout}}" #timer></div>
+    </div>
+    <div *ngIf="state.bars && state.bars[1]" class="second col p-0 position-relative">
+        <div class="position-absolute end-0" [ngStyle]="{ 'background-color': colors[state.bars[1]] }" [@timeOut]="{value:'', params:{duration : state.timeout}}" #timer></div>
+    </div>
+</div>
