--- a/src/app/widgets/elements/timeout/timeout.component.scss
+++ b/src/app/widgets/elements/timeout/timeout.component.scss
@@ -2,7 +2,11 @@
   position: fixed;
   bottom: 0;
   height: 20px;
-  left: 0;
-  width: 0vw;
-  background-color: #ffb000;
+  width: 100vw;
+  .first,
+  .second {
+    > div {
+      height: 20px;
+    }
+  }
 }
