--- a/src/app/widgets/elements/prompt/prompt.component.scss
+++ b/src/app/widgets/elements/prompt/prompt.component.scss
@@ -3,7 +3,7 @@
 .prompt {
   height: 200px;
   min-width: 200px;
-  background-color: $success;
+  background-color: $success_color;
   border-radius: 10%;
   font-size: 125px;
   text-align: center;
