fix: 🐛 make video-element bg-color not customizable
✅ Closes: SH-1130

--- a/src/app/widgets/elements/video/video.component.scss
+++ b/src/app/widgets/elements/video/video.component.scss
@@ -4,9 +4,11 @@
   width: 100vw;
   z-index: 100;
 }
+
 .video-element {
   width: 600px;
   padding: 44px;
+  background-color: #2f51ae;
 }
 .video {
   width: 100%;
