feat: 🎸 calibration tutorial overlay
✅ Closes: SH-1332

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -1,5 +1,8 @@
 <div class="elements">
   <!-- {{ state | json }} -->
+  <div class="calibration-tutorial">
+    <element-calibration-tutorial></element-calibration-tutorial>
+  </div>
   <div class="score">
     <!-- <label>{{state.score.data.label}}</label>
         <span>{{state.score.data.value}}</span> -->
