--- a/src/app/widgets/elements/guide/guide.component.html
+++ b/src/app/widgets/elements/guide/guide.component.html
@@ -4,7 +4,7 @@
     <div class="w-32 h-24 bg-white rounded-3 start-10 bottom-10 position-absolute d-flex p-2">
         <img class="m-auto" [src]="logoUrl" alt="sound health">
     </div>
-    <div *ngIf="state && state.data.title" class="bg-white rounded-2 h-24 position-absolute start-48 bottom-10 d-flex p-2">
+    <div *ngIf="state && state.data.title" class="title bg-white rounded-2 position-absolute start-48 bottom-10 d-flex p-2">
         <h1 class="text-primary my-auto px-5 display-6">{{state && state.data.title}}</h1>
     </div>
 </div>
