--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -11,8 +11,8 @@
 <ng-container *ngIf="cameraStatus === 'failure'">
   <div style="z-index: 200;" class="position-fixed top-1/2 start-1/2 translate-middle d-flex flex-column align-items-center bg-white shadow-xl rounded-3 p-10">
     <img class="w-20 h-20 mb-7" src="/assets/images/exclamation.jpg" alt="exclamation">
-    <h1 class="text-primary">No camera detected.</h1>
-    <p class="pt-3 pb-7 font-bold text-lg text-center" style="color: #2F51AE;">Click on the refresh button below once you have connected a camera to your device.</p>
+    <h1 class="text-primary">Can’t access your camera.</h1>
+    <p class="pt-3 pb-7 font-bold text-lg text-center" style="color: #2F51AE;">Please ensure that camera is connected and not in use by another app (like Zoom, Skype etc).</p>
     <button (click)="refreshTab()" class="btn btn-primary px-32 py-2 text-sm text-nowrap">Refresh</button>
   </div>
 </ng-container>
