--- a/src/app/widgets/elements/banner/banner.component.html
+++ b/src/app/widgets/elements/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div [@animate-banner]="{value: bannerAnimationState}" *ngIf="attributes && attributes.visibility === 'visible'"
+<div [@animate-banner] *ngIf="attributes && attributes.visibility === 'visible'"
   class="banner" [class.loader]="state.type === 'loader'" [class.status]="state.type === 'status'" [class.action]="state.type === 'action'">
   <div class="pt-4" [innerHTML]="state.htmlStr || '' | safe: 'html'"></div>
   <div class="row pt-6">
