fix: 🐛 try using webm video file format
to see if that fixes video not loading issue

--- a/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
+++ b/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
@@ -12,7 +12,7 @@
         <div class="col-4">
             <div>
                 <video (waiting)="videoEnded(1)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [autoplay]="true" [muted]="true" loop>
-                    <source src="assets/videos/calibration-tutorial/step-1.mp4" type="video/mp4" />
+                    <source src="assets/videos/calibration-tutorial/step-1.webm" type="video/webm" />
                     Video not loaded
                 </video>
             </div>
@@ -20,7 +20,7 @@
         <div class="col-4">
             <div class="position-relative">
                 <video (waiting)="videoEnded(2)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [muted]="true" loop #videoStep2>
-                    <source src="assets/videos/calibration-tutorial/step-2.mp4" type="video/mp4" />
+                    <source src="assets/videos/calibration-tutorial/step-2.webm" type="video/webm" />
                     Video not loaded
                 </video>
                 <div class="overlay position-absolute w-full h-full bg-secondary rounded top-0 start-0"></div>
@@ -29,7 +29,7 @@
         <div class="col-4">
             <div class="position-relative">
                 <video (waiting)="videoEnded(3)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [muted]="true" loop #videoStep3>
-                    <source src="assets/videos/calibration-tutorial/step-3.mp4" type="video/mp4" />
+                    <source src="assets/videos/calibration-tutorial/step-3.webm" type="video/webm" />
                     Video not loaded
                 </video>
                 <div class="overlay position-absolute w-full h-full bg-secondary rounded top-0 start-0"></div>
