--- a/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
+++ b/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
@@ -9,41 +9,15 @@
             </button>
         </div>
         <div class="col-12">&nbsp;</div>
-        <div class="col-4">
-            <div>
-                <video (waiting)="videoEnded(1)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [autoplay]="true" [muted]="true" loop>
-                    <source src="assets/videos/calibration-tutorial/step-1.webm" type="video/webm" />
+        <div class="row">
+            <div class="col-12">
+                <video class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [autoplay]="true" [muted]="true" loop>
+                    <source src="assets/videos/calibration-tutorial/calibration-tutorial.mp4" type="video/mp4" />
+                    <source src="assets/videos/calibration-tutorial/calibration-tutorial.webm" type="video/webm" />
                     Video not loaded
                 </video>
             </div>
         </div>
-        <div class="col-4">
-            <div class="position-relative">
-                <video (waiting)="videoEnded(2)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [muted]="true" loop #videoStep2>
-                    <source src="assets/videos/calibration-tutorial/step-2.webm" type="video/webm" />
-                    Video not loaded
-                </video>
-                <div class="overlay position-absolute w-full h-full bg-secondary rounded top-0 start-0"></div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="position-relative">
-                <video (waiting)="videoEnded(3)" class="w-full h-full rounded bg-secondary" style="object-fit: fill;" [controls]="false" [muted]="true" loop #videoStep3>
-                    <source src="assets/videos/calibration-tutorial/step-3.webm" type="video/webm" />
-                    Video not loaded
-                </video>
-                <div class="overlay position-absolute w-full h-full bg-secondary rounded top-0 start-0"></div>
-            </div>
-        </div>
-        <p class=" h3 col-4 text-center h-8">1</p>
-        <p class=" h3 col-4 text-center h-8">2</p>
-        <p class=" h3 col-4 text-center h-8">3</p>
-        <h3 class="col-4 text-center h-8 text-primary">Decide standing position</h3>
-        <h3 class="col-4 text-center h-8 text-primary">Adjust the screen</h3>
-        <h3 class="col-4 text-center h-8 text-primary">Move into red box</h3>
-        <p class="col-4 text-center font-bold">Find a good position where the whole body will be visible and you can freely move.</p>
-        <p class="col-4 text-center font-bold">Align the bottom of the screen to be in line with your feet.</p>
-        <p class="col-4 text-center font-bold">Move your whole body into the red box until the box turns green.</p>
         <div class="col-12">&nbsp;</div>
     </div>
 </div>
