--- a/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
+++ b/src/app/widgets/elements/calibration-tutorial/calibration-tutorial.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="state && state.attributes.visibility === 'visible'" class="w-screen h-screen position-absolute bg-white d-flex overflow-auto">
+<div *ngIf="state && state.attributes.visibility === 'visible'" class="ct-container w-screen h-screen position-fixed bg-white d-flex overflow-auto">
         <div class="container row mx-auto mt-3 gx-5">
             <img src="assets/images/sound_health_logo_alpha.png" alt="sound health alpha logo" class="col-2 px-2" style="object-fit: contain;">
             <h2 class="col-8 text-center text-primary my-auto">CAMERA SETUP</h2>
