feat: 🎸 allow resizing of app
✅ Closes: SH-1390, SH-203

--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -1,4 +1,4 @@
-<div #gameElm>
+<div #gameElm (window:resize)="onResize($event)">
   <video id="webcam" crossorigin="anonymous" #videoElm></video>
   <div id="phaser-canvas" #canvasElm></div>
   <app-elements></app-elements>
