feat: 🎸 health bar element

--- a/src/app/widgets/elements/elements.component.html
+++ b/src/app/widgets/elements/elements.component.html
@@ -9,6 +9,10 @@
     <element-score></element-score>
   </div>
 
+  <div class="health">
+    <element-health></element-health>
+  </div>
+
   <div class="timer">
     <element-timer></element-timer>
   </div>
