--- a/src/app/widgets/elements/score/score.component.html
+++ b/src/app/widgets/elements/score/score.component.html
@@ -1,15 +1,20 @@
 <div *ngIf="state && state.attributes.visibility === 'visible'"
-  class="top-5 start-5 position-absolute p-3 rounded-3 bg-primary text-white h2 d-flex justify-content-center align-items-center">
-  {{state.data.label ? state.data.label + ':' : ''}}
-  <img class="w-12 h-12" *ngIf="state.data.icon" [src]="state.data.icon" alt="icon">&nbsp;
-
-  <p *ngIf="state && state.data && ( state.data.value || state.data.goal)"
-    [ngClass]="((state.data.value !== undefined) && state.data.goal) ? 'px-5': ''">
-    <span [@fadeTransition]="{ value: animationState, params: { duration: state.data.transitionDuration || '500' } }"
-      class="display-6 font-bold">{{state.data.value}}</span>
-    <span *ngIf="state.data && state.data.goal"
-      [@fadeTransition]="{ value: animationState, params: { duration: state.data.transitionDuration || '500' } }"
-      class="display-6 font-bold">/{{state.data.goal}}</span>
-  </p>
-
+  class="top-5 start-5 position-absolute">
+  <div class="d-flex align-items-center">
+    <img [src]="state.data.icon" alt="icon" class="w-16 h-16 pe-4" style="object-fit: contain;">
+    <h1 class="text-white text-outline display-6">{{ state.data.score }}</h1>
+  </div>
+  <div class="row" *ngIf="state.data.highScore">
+    <h2 class="text-white text-outline">{{ 'Best: ' + state.data.highScore }}</h2>
+  </div>
+  
+  <div *ngIf="scoreGain || state.data.combo" [@collectScore]="{ value: scoreGain, params: state.data.position ? state.data.position :  { top: '50%', left: '75%' } }" class="collected-score position-fixed">
+    <div class="d-flex justify-content-center align-items-center">
+      <img [src]="state.data.icon" alt="icon" class="w-14 h-14 pe-2" style="object-fit: contain;">
+      <p class="font-italic h5 text-2xl text-gradient pe-2">+{{ scoreGain - (state.data.score || 0) }}</p>
+    </div>
+    <div *ngIf="state.data.combo" class="text-nowrap text-center">
+      <p class="font-italic h5 text-2xl text-gradient pe-2">{{ 'Combo x' + state.data.combo }}</p>
+    </div>
+  </div>
 </div>
